--- a/css/style.css
+++ b/css/style.css
@@ -303,12 +303,10 @@ a:hover {
 
 /* Стиль для секції спеціалістів */
 .specialists {
-    background-size: 1440px 1120px;
-    background-position: center bottom;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    width: 1440px;
-    height: 1500px;
+    width: 100%;
+    height: 1200px;
     color: white;
     display: flex;
     justify-content: center;
@@ -319,17 +317,8 @@ a:hover {
     z-index: 1;
     margin: 0 auto;
     margin-bottom: 10px;
-}
-
-/* Стиль для картинки в секції */
-.specialists img {
-    width: 100%;
-    max-width: 1440px;
-    height: auto;
-    display: block;
-    position: absolute;
-    z-index: 0;
-    top: -90px;
+    background-size: cover;
+    background-image: url(../img/2.jpg);
 }
 
 /* Текстовий контент в секції */
@@ -421,4 +410,175 @@ a:hover {
     top: 0;
 }
 
+.specialists-text{
+    background-color: rgba(0, 0, 0, 0.2);
+}
 
+
+
+
+  .off-screen-menu{
+    background-color: #ff6600;
+    height: 100vh;
+    width: 100%;
+    max-width: 450px;
+    position: fixed;
+    top: 0;
+    right: -450px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 3rem;
+    transition: .3s ease;
+    z-index: 1;
+  }
+
+  .off-screen-menu.active{
+    right: 0;
+
+  }
+
+  /* Стилі списку */
+.off-screen-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+.off-screen-menu li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.off-screen-menu li a:hover {
+    background-color: #555; /* Легке затемнення при наведенні */
+}
+
+  .nav{
+    padding: 1rem;
+    display: flex;
+    background-color: #000;
+    border-radius: 0 0 64px 64px;
+    justify-content: space-around;
+  }
+
+.ham-menu{
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    position: relative;
+}
+
+.ham-menu span{
+    height: 5px;
+    width: 100%;
+    background-color: #269C0D;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+    z-index: 2;
+}
+
+
+.ham-menu span:nth-child(1){
+    top: 25%;
+}
+
+.ham-menu span:nth-child(3){
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1){
+    top: 50%;
+    transform: translate(-50%, -50%)  rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2){
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3){
+    top: 50%;
+    transform: translate(-50%, 50%)  rotate(-45deg);
+}
+
+
+.off-screen-menu{
+    display: none;
+}
+
+.ham-menu{
+    display: none;
+}
+
+.nav{
+    display: none;
+}
+
+
+
+@media (max-width: 1240px) {
+    .specialist-content{
+        display: none;
+    }
+  }
+
+  @media (max-width: 1020px) {
+    .container{
+        flex-direction: column;
+        align-items: center;
+    }
+  }
+
+  @media (max-width: 800px){
+    header{
+        display: none;
+    }
+    
+    .specialists{
+        display: none;
+    }
+    .off-screen-menu{
+        display: block;
+    }
+    
+    .ham-menu{
+        display: block;
+    }
+
+    .nav{
+        display: flex;
+    }
+  }
+
+
+  @media (max-width: 600px){
+    .specialist-card{
+        max-width:  260px;
+        height: 620px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .specialist-card h2, p{
+        padding: 0;
+    }
+    .specialist-card-text{
+        width: 250px;
+        padding-bottom: 50px;
+    }
+    .specialist-card-text button{
+        right: 40px;
+    }
+  }
