Added new styles

--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,10 @@ body {
     margin: 0 auto;
 }
 
-/* Шапка сайту */
 header {
     display: flex;
-    background-image: url('../img/2.jpg'); /* Заданий шлях до зображення */
-    background-size: cover;
+    background-image: url('../img/2.1.svg'); /* Заданий шлях до зображення */
+    background-size: 100dvw auto; /* 100% ширини вікна перегляду, висота автоматична */
     background-position: top;
     background-attachment: fixed;
     color: white;
@@ -38,37 +37,28 @@ header {
     overflow: hidden;
 }
 
+
 header::before {
-    content: ''; 
-    position: absolute; 
-    top: 0; 
+    content: "";
+    position: absolute;
+    top: 0;
     left: 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3); /* Напівпрозоре чорне затемнення */
-    z-index: -1; /* Псевдоелемент знаходиться під контентом */
+    background: rgba(0, 0, 0, 0.7); /* 40% затемнення */
+    z-index: -1; /* Поміщаємо затемнення за контент */
 }
 
 /* Логотип */
 .logo {
     height: 70px;
     background-color: #269C0D;
-    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     animation: rotate 10s linear infinite;
 }
 
-/* Анімація обертання логотипу */
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
 
 /* Стилі навігації */
 header nav {
@@ -79,7 +69,7 @@ header nav {
 header nav a {
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 30px;
     padding: 10px 15px;
     border-radius: 5px;
     position: relative;
@@ -306,7 +296,7 @@ a:hover {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 1200px;
+    height: 120dvw;
     color: white;
     display: flex;
     justify-content: center;
@@ -318,7 +308,7 @@ a:hover {
     margin: 0 auto;
     margin-bottom: 10px;
     background-size: cover;
-    background-image: url(../img/2.jpg);
+    background-image: url(../img/2.1.svg);
 }
 
 /* Текстовий контент в секції */
@@ -421,10 +411,10 @@ a:hover {
     background-color: #ff6600;
     height: 100vh;
     width: 100%;
-    max-width: 450px;
+    max-width: 300px;
     position: fixed;
     top: 0;
-    right: -450px;
+    right: -300px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -463,13 +453,13 @@ a:hover {
     background-color: #555; /* Легке затемнення при наведенні */
 }
 
-  .nav{
-    padding: 1rem;
+.nav {
+    padding: 1rem 3rem; /* Відступи зверху/знизу і зліва/справа */
     display: flex;
     background-color: #000;
     border-radius: 0 0 64px 64px;
     justify-content: space-around;
-  }
+}
 
 .ham-menu{
     height: 50px;
@@ -502,7 +492,7 @@ a:hover {
 
 .ham-menu.active span:nth-child(1){
     top: 50%;
-    transform: translate(-50%, -50%)  rotate(45deg);
+    transform: translate(-50%, 50%)  rotate(45deg);
 }
 
 .ham-menu.active span:nth-child(2){
@@ -543,7 +533,7 @@ a:hover {
   }
 
   @media (max-width: 800px){
-    header{
+    header {
         display: none;
     }
     
@@ -582,3 +572,68 @@ a:hover {
         right: 40px;
     }
   }
+
+  /* Спочатку елементи будуть невидимими */
+.specialist-content,
+.specialist-content-inner {
+    opacity: 0;
+    transform: translateY(30px); /* Вихід знизу */
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+/* Клас для показу елементів */
+.specialist-content.in-view,
+.specialist-content-inner.in-view {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.gear {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Міжзображеневий відступ */
+    padding-bottom: 50px;
+    position: relative;
+  }
+
+  .gear-line{
+    position: absolute;
+    z-index: -1;
+    width: 100dvw;
+  }
+  
+  .gear-img {
+    width: 10dvw; /* Розмір зображень */
+    height: 10dvw; /* Розмір зображень */
+    animation: rotate-gear 10s linear infinite;
+  }
+  
+  /* Анімація для обертання кожного зображення */
+  @keyframes rotate-gear {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  /* Додаткові стилі для різних швидкостей обертання */
+  .gear-1 {
+    animation-duration: 10s; /* Перше зображення */
+  }
+  
+  .gear-2 {
+    animation-duration: 12s; /* Друге зображення */
+  }
+  
+  .gear-3 {
+    animation-duration: 15s; /* Третє зображення */
+  }
+  
+  .main_logo{
+    width: 20dvw;
+    position: relative;
+    z-index: 5;
+}
