--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header {
     width: 100%;
     z-index: 1000;
     overflow: hidden;
+    border-bottom: 2px solid #ffffff;
 }
 
 
@@ -45,7 +46,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* 40% затемнення */
+    background: rgba(0, 0, 0, 0.6); /* 40% затемнення */
     z-index: -1; /* Поміщаємо затемнення за контент */
 }
 
@@ -408,7 +409,7 @@ a:hover {
 
 
   .off-screen-menu{
-    background-color: #ff6600;
+    background-color: #006400;
     height: 100vh;
     width: 100%;
     max-width: 300px;
@@ -459,6 +460,7 @@ a:hover {
     background-color: #000;
     border-radius: 0 0 64px 64px;
     justify-content: space-around;
+    border-bottom: 5px solid #269C0D;
 }
 
 .ham-menu{
